# afx-python-sdk

./: .gitignore  README.md  pyproject.toml
afx/: __init__.py  client.py  exchange.py  info.py  websocket.py
afx/protos/: __init__.py  dex.proto  dex_pb2.py
afx/utils/: __init__.py  config.py  http.py  protobuf.py  signing.py  wallet.py
docs/superpowers/plans/: 2026-05-25-afx-python-sdk.md
docs/superpowers/specs/: 2026-05-25-afx-python-sdk-design.md
examples/advanced/: multiple_wallets.py
examples/exchange/: approve_agent.py  assign_pos_margin.py  bind_referral.py  cancel_all.py  cancel_order.py  faucet_claim.py  place_bracket_order.py  place_order.py  place_tp_sl_orders.py  replace_order.py  revoke_agent.py  set_leverage.py  set_margin_mode.py  vault_deposit.py  vault_withdraw.py  withdraw.py
examples/info/: get_active_agent.py  get_agents.py  get_funding_rate_current.py  get_kline.py  get_orders.py  get_positions.py  get_products.py  get_wallet.py
examples/websocket/: subscribe.py  subscribe_account_state.py  subscribe_order_book.py  subscribe_ticker.py
tests/: e2e_approve_agent_testnet.py  test_clients.py  test_credentials.py  test_examples.py  test_protobuf.py  test_signing.py
