[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "afx-python-sdk"
version = "0.1.0"
description = "Python SDK for AFX DEX"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "eth-account>=0.13.0",
    "eth-hash>=0.7.0",
    "protobuf>=7.34.1",
    "requests>=2.31.0",
    "websockets>=12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["afx*"]

[tool.setuptools.package-data]
afx = ["protos/dex.proto"]
